2002-10-26  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/statusline.{cc,h}: Install an accelerator key (Escape) for
	the cancel button.

2002-10-26  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filelist.{cc,h} src/mainwindow.{cc,h}: Major cleanup of the
	busy action cancelation code.  The new code is now centralized in
	class MainWindow, and has been merged with the progressbar pulse
	notification and busy GUI updating.

	* src/filebuffer.{cc,h}: Implement support for cancelation of busy
	actions such as find_matches(), using the new scheme described
	above.

	* src/statusline.{cc,h}: Add cancel button to the GUI.

2002-10-26  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filebuffer.cc (create_with_error_message): Improve message
	title: s/Load failed/Can't read file/

2002-10-26  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filelist.cc src/mainwindow.cc: Make use of the progress bar
	pulse feature while globally replacing matches, too.

2002-10-26  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filebuffer.cc (create_with_error_message): Don't forget
	set_modified(false) after filling the buffer.

2002-10-26  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/statusline.cc: Correctly handle signal_style_changed()
	from the labels rather than the container.

	* src/filebuffer.{cc,h} src/fileio.{cc,h} src/filelist.{cc,h}:
	Instead of printing error messages to the console, write the
	message to a text buffer.  Use a dialog error stock image so
	that it looks good.

	* src/filebuffer.{cc,h} src/filelist.{cc,h} src/mainwindow.{cc,h}:
	In the match counter, display the number of matches per file rather
	than the overall match count.  Also, remember this original match
	count and don't decrease it when removing matches.  Make the match
	index counter work.

2002-10-25  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/statusline.{cc,h} (CounterBox): New class encapsulating a
	single "index/count"-style counter, for use by class StatusLine.